--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
     <div id="root"></div>
     <script src="https://cdn.bootcss.com/react/16.9.0/umd/react.production.min.js"></script>
     <script src="https://cdn.bootcss.com/react-dom/16.9.0/umd/react-dom.production.min.js"></script>
+    <script src="https://cdn.bootcss.com/react-router-dom/5.0.0/react-router-dom.min.js"></script>
 </body>
 </html>
