--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
     <script src="https://cdn.bootcss.com/react/16.9.0/umd/react.production.min.js"></script>
     <script src="https://cdn.bootcss.com/react-dom/16.9.0/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.bootcss.com/react-router-dom/5.0.0/react-router-dom.min.js"></script>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
 </body>
 </html>
