--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,8 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://cdn.bootcss.com/react/16.9.0/umd/react.production.min.js"></script>
-    <script src="https://cdn.bootcss.com/react-dom/16.9.0/umd/react-dom.production.min.js"></script>
-    <script src="https://cdn.bootcss.com/react-router-dom/5.0.0/react-router-dom.min.js"></script>
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
-    <script>
-        var vConsole = new VConsole();
-    </script>
+    <%=process.env.NODE_ENV==='production' ? '<script src="https://cdn.bootcss.com/react/16.9.0/umd/react.production.min.js"></script>' : ''%>
+    <%=process.env.NODE_ENV==='production' ? '<script src="https://cdn.bootcss.com/react-dom/16.9.0/umd/react-dom.production.min.js"></script>' : ''%>
+    <%=process.env.NODE_ENV==='production' ? '<script src="https://cdn.bootcss.com/react-router-dom/5.0.0/react-router-dom.min.js"></script>' : ''%>
 </body>
 </html>
